# broken_paste

./: Cargo.toml  index.html
.github/workflows/: trunk_build_and_deploy.yml
src/: main.rs
